@@ -26,12 +26,14 @@
       * #37 handle widget not existing
       * #38 more sensor/command types in translation
       * #102 Adding method to read domogik QRCODE configuration
+      * #19 start in a specific area (not yet finished)
       * Close #118 Add ACRA crash reports feedback by mail
       * Do not open history view if it is empty
       * #37 Widget_list for specific datatype (sensor and command)
       * Close #116 Values saved from datatype for use in Widget_list
       * Close #115 History for boolean widget with translation too
       * Update zeromq.jeromq to version 0.3.6
+      * Remove logger lib (https://github.com/orhanobut/logger) as it may crash when domodroid comes back from background due to too many requests.
       % Version 23
       _ 2016-09-25
       * Some translation for xee and body plugin
